<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaqFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/MainActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/shadowactionbar"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/btn_back_menu"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/btn_back_menu"
                android:fontFamily="sans-serif-condensed-medium"
                android:letterSpacing="0.02"
                android:text="@string/menu_help"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_message"
            android:layout_width="300dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/type_messager_background"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_send_layout"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/btn_emot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_emot"
                android:contentDescription="@string/emot_dumyy"
                />

            <EditText
                android:id="@+id/userMessageType"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_dummy"
                android:inputType="textMultiLine"
                android:maxWidth="240dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/colorGray"
                android:textCursorDrawable="@drawable/cursor_background"
                android:autofillHints="none">
                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_send_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_send_circle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/layout_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/layout_message"
            app:layout_constraintTop_toTopOf="@id/layout_message">

            <ImageView
                android:id="@+id/btn_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:src="@drawable/ic_mic"
                android:contentDescription="@string/send_text_dummy"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>