<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BerandaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/MainActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/shadowactionbar"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:background="@drawable/homelogobinar" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MainActionBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/BinarMainMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:clipToPadding="false"
                    android:paddingStart="0dp"
                    android:paddingTop="25dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="35dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/BinarRecommendEvent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:spanCount="2" />

                <RelativeLayout
                    android:id="@+id/BinarRecommendEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/BinarMainMenu">

                    <TextView
                        android:id="@+id/text_recommend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/text_recomend"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/user_name_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/text_recommend"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/user_dummy"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/eventRetrospekt"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_below="@id/text_recommend"
                        android:layout_marginTop="20dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="5dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/retrospekt" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/eventBinarConnect"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_below="@id/eventRetrospekt"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="5dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/binnarconnectevent" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/eventMasterClass"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_below="@id/eventBinarConnect"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="5dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/binarmasterclass" />

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="15dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/BinarRecommendEvent">

                    <TextView
                        android:id="@+id/latest_storie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/text_storie"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/storiesRecylerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/latest_storie"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:reverseLayout="false" />

                </RelativeLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>